fixing the scraper

--- a/Gathering Data.ipynb
+++ b/Gathering Data.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,17 +34,51 @@
     "from selenium.webdriver.common.keys import Keys\n",
     "from selenium.webdriver.common.action_chains import ActionChains\n",
     "import urllib.request\n",
-    "from bs4 import BeautifulSoup"
+    "from bs4 import BeautifulSoup\n",
+    "from selenium.webdriver.chrome.options import Options\n",
+    "from fake_useragent import UserAgent"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "keyword = 'Data Analyst'\n",
-    "url = \"https://www.glassdoor.com/blog/tag/job-search/\""
+    "chrome_path = r\"C:\\Users\\Grimmethy\\Desktop\\ChromeDriver\\chromedriver.exe\"\n",
+    "keyword = 'Data Scientist'\n",
+    "options = Options() \n",
+    "url = \"https://www.glassdoor.com/blog/tag/job-search/\"\n",
+    "\n",
+    "# set the window size\n",
+    "options.add_argument('--window-size=500,300')\n",
+    "\n",
+    "\n",
+    "\n",
+    "## What are the relevant pieces of information that I need to collect?\n",
+    "location = 'Seattle'\n",
+    "\n",
+    "# Company name\n",
+    "\n",
+    "#Salary\n",
+    "#Job Title\n",
+    "#Job Type: Full-time\n",
+    "#Job Function: Environmental Scientist\n",
+    "#Industry: Business Services\n",
+    "#Size: 51 to 200 Employees\n",
+    "#Revenue\n",
+    "    \n",
+    "#Rating Highlights\n",
+    "#Compensation & Benefits: 3.7 \n",
+    "#Culture & Values: 3.9 \n",
+    "#Career Opportunities: 3.9\n",
+    "#Work/Life Balance: 4.1\n",
+    "#Senior Management\n",
+    "\n",
+    "#Reviews\n",
+    "#Benefits\n",
+    "\n",
+    "#Remote work?"
    ]
   },
   {
@@ -56,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,16 +115,18 @@
     "        \n",
     "        location_field.clear()\n",
     "        location_field.send_keys(loc)\n",
+    "        print('filling search bar')\n",
     "\n",
     "        # wait for a little so location gets set\n",
     "        time.sleep(3)\n",
-    "        driver.find_element_by_xpath(\" //*[@id='HeroSearchButton']\").click()\n",
+    "        driver.find_element_by_xpath('//*[@id=\"scBar\"]/div/button/span[2]').click()\n",
     "\n",
     "        # close a random popup if it shows up\n",
     "        try:\n",
     "            driver.find_element_by_xpath(\"//*[@id='JAModal']/div/div[2]/span\").click()\n",
     "        except NoSuchElementException:\n",
     "            pass\n",
+    "        print('closing pop-up')\n",
     "        \n",
     "        time.sleep(3)\n",
     "        \n",
@@ -122,10 +158,10 @@
     "    #options.add_argument('headless')\n",
     "    \n",
     "    #Change the path to where chromedriver is in your home folder.\n",
-    "    driver = webdriver.Chrome(executable_path=path, options=options)\n",
+    "    driver = webdriver.Chrome(executable_path= r\"C:\\Users\\Grimmethy\\Desktop\\ChromeDriver\\chromedriver.exe\", options=options)\n",
     "    driver.maximize_window()\n",
     "\n",
-    "    \n",
+    "    print('firing it up')\n",
     "    return driver\n",
     "\n",
     "def Xout_pop_ups(driver):\n",
@@ -142,6 +178,7 @@
     "    try:\n",
     "        driver.find_element_by_css_selector('[alt=\"Close\"]').click() #clicking to the X.\n",
     "    except Exception:\n",
+    "        print('murdering pup up')\n",
     "        pass\n",
     "    \n",
     "    \n",
@@ -158,7 +195,7 @@
     "            illstatus = 'Illness Corrected'\n",
     "        except Exception:\n",
     "            illstatus = 'Failed'\n",
-    "        \n",
+    "    print('clicking listing')    \n",
     "    return illstatus\n",
     "        \n",
     "    \n",
@@ -302,6 +339,7 @@
     "    \"Competitors\" : competitors,\n",
     "    \"Easy Apply\": easy_apply})\n",
     "    \n",
+    "    print('getting data')\n",
     "    return jobinfo\n",
     "\n",
     "def make_sure_jobs(driver):\n",
@@ -408,7 +446,7 @@
     "    if(start_at == 0):\n",
     "        df = get_jobs(keyword, 1, verbose, path, slp_time)\n",
     "        df = df[0:0]\n",
-    "        df.to_csv('Jobs_apply/glassdoor_job_data/' + keyword.replace(' ', '') + '.csv', index = False)\n",
+    "        df.to_csv(keyword.replace(' ', '') + '.csv', index = False)\n",
     "    \n",
     "    cities = top_cities()\n",
     "    \n",
@@ -419,7 +457,7 @@
     "        except Exception:\n",
     "            print('!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!')\n",
     "            df = get_jobs(keyword, num_jobs, verbose, path, slp_time, loc = (cities.iloc[x,0] + ', ' + cities.iloc[x,1]), driver = driver)\n",
-    "        df.to_csv('Jobs_apply/glassdoor_job_data/' + keyword.replace(' ', '') + '.csv', index = False, mode='a', header=False)\n",
+    "        df.to_csv(keyword.replace(' ', '') + '.csv', index = False, mode='a', header=False)\n",
     "\n",
     "\n",
     "\n",
@@ -443,105 +481,182 @@
     "    city = pd.Series(city)\n",
     "    state = pd.Series(state)\n",
     "    df['City'] = city\n",
-    "    df['State'] = state"
+    "    df['State'] = state\n",
+    "    return df"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def scrape(glassdoorUrl):\n",
-    "    response = requests.get(glassdoorUrl)\n",
-    "    soup = BeautifulSoup(response.content, 'html.parser')\n",
-    "    profile = soup.findAll('ul', class_=\"jlGrid hover p-0 \")\n",
-    "    rows = []\n",
-    "    print(response)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Here are the variable used for identifying what specific url to scrape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# This is a temporary setting. It uses \"Data Science\" as a search query.\n",
-    "glassdoorUrl = 'https://www.glassdoor.com/Job/jobs.htm?sc.keyword=data%20science&locT=C&locId=1150481'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "scrolled": false
-   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<Response [403]>\n"
+      "firing it up\n",
+      "firing it up\n",
+      "filling search bar\n",
+      "closing pop-up\n",
+      "clicking listing\n",
+      "getting data\n",
+      "Job Target Reached:1/1\n",
+      "City Index: 0\n",
+      "filling search bar\n",
+      "closing pop-up\n",
+      "clicking listing\n",
+      "getting data\n",
+      "clicking listing\n",
+      "getting data\n",
+      "clicking listing\n",
+      "getting data\n",
+      "clicking listing\n",
+      "getting data\n",
+      "clicking listing\n",
+      "getting data\n",
+      "clicking listing\n",
+      "getting data\n",
+      "clicking listing\n",
+      "getting data\n",
+      "clicking listing\n",
+      "getting data\n",
+      "clicking listing\n",
+      "getting data\n",
+      "clicking listing\n",
+      "getting data\n",
+      "clicking listing\n",
+      "getting data\n",
+      "clicking listing\n",
+      "getting data\n",
+      "clicking listing\n",
+      "getting data\n",
+      "clicking listing\n",
+      "getting data\n",
+      "clicking listing\n",
+      "getting data\n",
+      "clicking listing\n",
+      "getting data\n",
+      "clicking listing\n",
+      "getting data\n",
+      "clicking listing\n",
+      "getting data\n",
+      "clicking listing\n",
+      "getting data\n",
+      "clicking listing\n",
+      "getting data\n",
+      "clicking listing\n",
+      "getting data\n",
+      "clicking listing\n",
+      "getting data\n",
+      "clicking listing\n",
+      "getting data\n",
+      "clicking listing\n",
+      "getting data\n",
+      "clicking listing\n",
+      "getting data\n",
+      "clicking listing\n",
+      "getting data\n",
+      "clicking listing\n",
+      "getting data\n",
+      "clicking listing\n",
+      "getting data\n",
+      "clicking listing\n",
+      "getting data\n",
+      "clicking listing\n",
+      "getting data\n",
+      "murdering pup up\n",
+      "clicking listing\n",
+      "getting data\n",
+      "clicking listing\n",
+      "getting data\n",
+      "clicking listing\n",
+      "getting data\n",
+      "clicking listing\n",
+      "getting data\n",
+      "clicking listing\n",
+      "getting data\n",
+      "clicking listing\n",
+      "getting data\n",
+      "clicking listing\n",
+      "getting data\n",
+      "clicking listing\n",
+      "getting data\n",
+      "clicking listing\n",
+      "getting data\n",
+      "clicking listing\n",
+      "getting data\n",
+      "clicking listing\n",
+      "getting data\n",
+      "clicking listing\n",
+      "getting data\n",
+      "clicking listing\n",
+      "getting data\n",
+      "clicking listing\n",
+      "getting data\n",
+      "clicking listing\n",
+      "getting data\n",
+      "clicking listing\n",
+      "getting data\n",
+      "clicking listing\n",
+      "getting data\n",
+      "clicking listing\n",
+      "getting data\n",
+      "clicking listing\n",
+      "getting data\n",
+      "clicking listing\n",
+      "getting data\n",
+      "clicking listing\n",
+      "getting data\n",
+      "clicking listing\n",
+      "getting data\n",
+      "clicking listing\n",
+      "getting data\n",
+      "clicking listing\n",
+      "getting data\n",
+      "clicking listing\n",
+      "getting data\n",
+      "clicking listing\n",
+      "getting data\n",
+      "clicking listing\n",
+      "getting data\n",
+      "clicking listing\n",
+      "getting data\n",
+      "clicking listing\n",
+      "getting data\n",
+      "clicking listing\n",
+      "getting data\n",
+      "clicking listing\n",
+      "getting data\n",
+      "clicking listing\n",
+      "getting data\n",
+      "murdering pup up\n",
+      "clicking listing\n"
      ]
     }
    ],
    "source": [
-    "scrape(glassdoorUrl)"
+    "page_limit(keyword,500, False, r\"C:\\Users\\Grimmethy\\Desktop\\ChromeDriver\\chromedriver.exe\", 2.5, start_at = 0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import glassdoorscraper as gc"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<module 'glassdoorscraper' from 'C:\\\\Users\\\\Grimmethy\\\\Flatironcoursework\\\\capstone\\\\CapstoneProject.CareerSearch\\\\glassdoorscraper.py'>"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
